# rwig-monorepo

./: rwig.code-workspace
rwig/: Cargo.toml
rwig-common/: Cargo.toml
rwig-common/src/ipc/: message.rs
rwig/patch/: Cargo.toml
rwig/patch/src/: com.rs  lib.rs
rwig/patch/src/audio/: endpoint.rs
rwig/patch/src/detours/: audio_client_detours.rs  render_client_detours.rs  vtable.rs
rwig/patch/src/ipc/: channels.rs  handshake.rs  listener.rs  message.rs
rwig/patch/src/utils/: audio_utils.rs
rwig/src/: lib.rs
rwig/src/capture/: capture_instance.rs
rwig/src/hook/: compatibility_info.rs  eject.rs  inject.rs  injector.rs  payload.rs
rwig/src/ipc/: handshake.rs  remote_call.rs
rwig/src/stream/: stream.rs
